# Sudoku-Project

./: CMakeLists.txt  Game.c  Game.h  GurobiHelper.c  GurobiHelper.h  IOHandler.c  IOHandler.h  List.c  List.h  MainAux.c  MainAux.h  Parser.c  Parser.h  README.md  Solver.c  Solver.h  Stack.c  Stack.h  main.c
